# chess-kumar

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  build_app.sh  make_universal.sh
assets/: cursor.cur
src/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  ChessAI.cpp  ChessAI.h  ChessBoard.cpp  ChessBoard.h  Game.cpp  Game.h  Menu.cpp  Menu.h  NetworkManager.cpp  NetworkManager.h  OpeningBook.cpp  OpeningBook.h  Settings.h  main.cpp
